--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
     <header class="header-nav">
 
-        <a href="home.html">
+        <a href="index.html">
             <img src="ressources/images/logo.png" alt="logo Le Freshly Restaurant " class="logo">
             <strong><i class="fa-solid fa-star"></i>Le Freshly Restaurant<i class="fa-solid fa-star"></i></strong></a>
 
         <nav class="navmenu">
 
-            <a href="home.html" class="active">Home</a>
+            <a href="index.html" class="active">Home</a>
             <a href="about.html">About</a>
             <a href="menus.html"> Menus</a>
             <a href="contact.html">Contact</a>
