--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,13 @@
 	<body>
 		<header>
 			<div class="container">
-				<a href="home.html" class="logo">
+				<a href="index.html" class="logo">
 					<img src="img/logo.png" alt="Logo Freshly Restaurant">
 					<strong>Freshly restaurant</strong>
 				</a>
 				<nav>
 					<ul>
-						<li><a href="home.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="menus.html" class="active">Menus</a></li>
 						<li><a href="contact.html" class="active">Contact</a></li>
