--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
-						<li><a href="menus.html" class="active">Menus</a></li>
+						<li><a href="menus.html">Menus</a></li>
 						<li><a href="contact.html" class="active">Contact</a></li>
 					</ul>
 				</nav>
